adds defitions to the solid principle acronyms